--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GitHub Linguist Colour Picker</title>
+    <title>GitHub Linguist Free Colour Picker</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="app.css" />
   </head>
   <body>
-    <h1>GitHub Linguist Colour Picker</h1>
-    <p>Use your mouse to find a free colour, or enter it manually.</p>
+    <h1>GitHub Linguist Free Colour Picker</h1>
+    <p>Use your mouse to find a free colour, or enter a hex value manually.</p>
     <table id="color-picker">
       <tr><td colspan="2"><canvas id="color-block" height="500" width="585"></canvas></td></tr>
       <tr><td id="color-label" style="background-color: white"></td>
